<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        tools:context="br.edu.unipampa.scpapp.MainActivity"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageSic"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/sic"
            android:layout_weight="0.03" />

        <TextView
            android:id="@+id/textDigite"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="Informe o número de controle e seu CNPJ ou CPF"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/campo_cont_processo"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:hint="Digite aqui o número de controle"
            android:layout_marginLeft="20dp"
            android:inputType="numberSigned" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdCPF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_weight="1"
                    android:text="CPF" />

                <RadioButton
                    android:id="@+id/rdCNPJ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CNPJ"
                    android:layout_weight="4.80" />
            </RadioGroup>

        </LinearLayout>



        <EditText
            android:id="@+id/campo_cpf"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:hint="Digite aqui o CPF ou CNPJ"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-3dp"
            android:inputType="numberSigned" />



        <CheckBox
            android:id="@+id/chkSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/etNumCont"
            android:text="Salvar dados" />

        <Button
            android:id="@+id/btpesquisar"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorVermelhoEscuro"
            android:text="Pesquisar"
            android:textColor="@android:color/background_light" />


        <ImageView
            android:id="@+id/imagePrefeitura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/prefeitura" />
    </LinearLayout>

</ScrollView>
