...
            android:orientation="vertical"
            android:weightSum="1"
            tools:context="br.edu.unipampa.scpapp.Controller.AndamentoActivity">


            <Button
                android:id="@+id/btAndamento"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/colorVermelhoEscuro"
                android:onClick="BTandamento"
                android:text="Andamento"
                android:textColor="@android:color/background_light" />

        </LinearLayout>


        <ImageView
...
